new requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-torch
-torchvision
-pytorch-lightning
-numpy
-pandas
-opencv-python
-matplotlib
-plotly
-seaborn
-scikit-learn
-scikit-image
-torchmetrics
-ipywidgets
-stocaching
-torchsampler
+torch>=2.0
+torchvision>=0.15
+pytorch-lightning>=2.0
+numpy>=1.23
+pandas>=1.5
+opencv-python>=4.8
+matplotlib>=3.7
+plotly>=5.18
+seaborn>=0.12
+scikit-learn>=1.3
+scikit-image>=0.21
+torchmetrics>=1.2
+ipywidgets>=8.0
+stocaching>=0.2
+torchsampler>=0.1
